# RenduCore

./: .gitignore  CMakeLists.txt  README.md  main.cpp
client/: CMakeLists.txt  client.cc  client.h
cmake/: showoptions.cmake
cmake/compiler/clang/: settings.cmake
cmake/compiler/gcc/: settings.cmake
cmake/compiler/msvc/: settings.cmake
cmake/macros/: AutoCollect.cmake  CheckBuildDir.cmake  ConfigureBaseTargets.cmake  ConfigureScripts.cmake  FindGit.cmake
cmake/platform/unix/: settings.cmake
contrib/: enumutils_describe.py
contrib/debugger/: crashreport.gdb
core/: CMakeLists.txt  buffer.c  buffer.h  jemalloc_define.h  protocol.c  protocol.h
core/log/: CMakeLists.txt  logger.cc  logger.h
core/malloc/: zmalloc.c
core/network/: ae.c  ae_epoll.c  ae_select.c
core/redis_network/: CMakeLists.txt  ae_epoll.c
core/server/: CMakeLists.txt  server.h
core/util/: file.h  port_posix.h  status.cc  status.h  timer.cc  timer.h  util.h
dep/: CMakeLists.txt
dep/SFMT/: CMakeLists.txt
dep/argon2/: CMakeLists.txt
dep/boost/: CMakeLists.txt
dep/bzip2/: CMakeLists.txt
dep/efsw/: CMakeLists.txt
dep/fmt/: CMakeLists.txt
dep/g3dlite/: CMakeLists.txt
dep/gsoap/: CMakeLists.txt
dep/gtest/: CMakeLists.txt
dep/jemalloc/: CMakeLists.txt
dep/libmpq/: CMakeLists.txt
dep/recastnavigation/Detour/: CMakeLists.txt
dep/recastnavigation/Recast/: CMakeLists.txt
dep/zlib/: CMakeLists.txt
log/: CMakeLists.txt
loglib/: CMakeLists.txt
my_test/: CMakeLists.txt  client_test.cc  server_test.c  server_test.cc
server/: CMakeLists.txt  i_socket_server.h  server.cc  server.h
src/: CMakeLists.txt
src/common/: Banner.cpp  Banner.h  CMakeLists.txt  Common.cpp  Common.h  CompilerDefs.h  Define.h  GitRevision.cpp  GitRevision.h
src/common/Asio/: AsioHacksFwd.h  DeadlineTimer.h  IoContext.h  IpAddress.h  IpNetwork.h  Resolver.h  Strand.h
src/common/Collision/: BoundingIntervalHierarchy.h  DynamicTree.cpp  DynamicTree.h  RegularGrid.h
src/common/Collision/Management/: IVMapManager.h  MMapFactory.h  MMapManager.cpp  MMapManager.h  VMapFactory.h  VMapManager2.h
src/common/Collision/Maps/: MapTree.h  TileAssembler.h
src/common/Collision/Models/: GameObjectModel.h  ModelInstance.h  WorldModel.h
src/common/Configuration/: BuiltInConfig.h  Config.cpp  Config.h
src/common/Cryptography/: AES.cpp  AES.h  ARC4.h  Argon2.cpp  Argon2.h  BigNumber.h  CryptoGenerics.h  HMACSHA1.h  OpenSSLCrypto.h  SHA1.h  TOTP.cpp  TOTP.h
src/common/Cryptography/Authentication/: AuthCrypt.h
src/common/DataStores/: DBCFileLoader.h
src/common/Debugging/: Errors.cpp  Errors.h  WheatyExceptionReport.cpp  WheatyExceptionReport.h
src/common/Encoding/: Base32.cpp  Base32.h  Base64.cpp  Base64.h  BaseEncoding.h
src/common/IPLocation/: IPLocation.cpp  IPLocation.h
src/common/Logging/: Appender.cpp  Appender.h  AppenderConsole.cpp  AppenderConsole.h  AppenderFile.cpp  AppenderFile.h  Log.cpp  Log.h  LogCommon.h  LogMessage.cpp  LogMessage.h  LogOperation.h  Logger.h
src/common/Metric/: Metric.cpp  Metric.h
src/common/Threading/: MPSCQueue.h  ProcessPriority.h
src/common/Utilities/: AsyncCallbackProcessor.h  Containers.h  EventMap.h  EventProcessor.h  FuzzyFind.h  Hash.h  IteratorPair.h  Random.h  Regex.h  SmartEnum.h  StartProcess.cpp  StartProcess.h  StringFormat.h  TaskScheduler.h  Tuples.h  Util.cpp  Util.h  advstd.h
src/server/authserver/: CMakeLists.txt  Main.cpp
src/server/authserver/Server/: AuthSession.cpp  AuthSocketMgr.h
src/server/database/: CMakeLists.txt
src/server/database/Database/: AdhocStatement.h  DatabaseEnv.h  DatabaseLoader.cpp  DatabaseLoader.h  DatabaseWorker.h  DatabaseWorkerPool.cpp  DatabaseWorkerPool.h  Field.cpp  Field.h  MySQLConnection.cpp  MySQLConnection.h  MySQLPreparedStatement.h  MySQLThreading.h  PreparedStatement.h  QueryCallback.h  QueryHolder.cpp  QueryHolder.h  QueryResult.h  SQLOperation.h  Transaction.h
src/server/database/Logging/: AppenderDB.h
src/server/database/Updater/: DBUpdater.cpp  DBUpdater.h  UpdateFetcher.cpp  UpdateFetcher.h
src/server/game/: CMakeLists.txt
src/server/game/AI/: AIException.h  CreatureAI.cpp  CreatureAI.h  CreatureAIImpl.h  CreatureAISelector.h
src/server/game/Accounts/: AccountMgr.cpp  AccountMgr.h  RBAC.h
src/server/game/Achievements/: AchievementMgr.cpp  AchievementMgr.h
src/server/game/AuctionHouse/: AuctionHouseMgr.cpp  AuctionHouseMgr.h
src/server/game/AuctionHouseBot/: AuctionHouseBot.cpp  AuctionHouseBot.h  AuctionHouseBotBuyer.h  AuctionHouseBotSeller.cpp  AuctionHouseBotSeller.h
src/server/game/Battlefield/: Battlefield.cpp  Battlefield.h  BattlefieldMgr.cpp  BattlefieldMgr.h
src/server/game/Battlegrounds/: Arena.h  ArenaScore.h  ArenaTeam.h  ArenaTeamMgr.h  Battleground.cpp  Battleground.h  BattlegroundMgr.cpp  BattlegroundMgr.h  BattlegroundQueue.cpp  BattlegroundQueue.h
src/server/game/Cache/: CharacterCache.h
src/server/game/Calendar/: CalendarMgr.cpp  CalendarMgr.h
src/server/game/Chat/: Chat.cpp  Chat.h  HyperlinkTags.cpp  Hyperlinks.cpp  Hyperlinks.h
src/server/game/Combat/: CombatManager.h  ThreatManager.h
src/server/game/Conditions/: ConditionMgr.cpp  ConditionMgr.h  DisableMgr.h
src/server/game/DataStores/: DBCStores.cpp  DBCStores.h  M2Stores.cpp  M2Stores.h
src/server/game/DungeonFinding/: LFG.h  LFGGroupData.h  LFGMgr.cpp  LFGMgr.h  LFGPlayerData.h  LFGQueue.cpp  LFGQueue.h  LFGScripts.h
src/server/game/Events/: GameEventMgr.h
src/server/game/Globals/: ObjectAccessor.cpp  ObjectAccessor.h  ObjectMgr.cpp  ObjectMgr.h
src/server/game/Grids/: GridDefines.h  GridStates.h  NGrid.h  ObjectGridLoader.h
src/server/game/Groups/: Group.h  GroupMgr.h  GroupReference.h
src/server/scripts/: CMakeLists.txt  ScriptLoader.cpp.in.cmake
src/server/shared/: CMakeLists.txt  SharedDefines.cpp  SharedDefines.h  enuminfo_SharedDefines.cpp
src/server/worldserver/: CMakeLists.txt  Main.cpp
src/test/: CMakeLists.txt  unittest.cpp
util/: CMakeLists.txt  file.cc  port_posix.cc  status.h  util.cc
utillib/: CMakeLists.txt  file.cc  file.h
(+361 files in other folders)
