# 引入库
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/core)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/server)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/log)

SET(JEMALLOC_INCLUDE_DIR /usr/include/jemalloc)
SET(JEMALLOC_LIB /usr/local/lib)
INCLUDE_DIRECTORIES(${JEMALLOC_INCLUDE_DIR})
LINK_DIRECTORIES(${JEMALLOC_LIB})

AUX_SOURCE_DIRECTORY(. my_test_SRC)

# 生成可执行的target
ADD_EXECUTABLE(my_test ${my_test_SRC})

# 链接库
TARGET_LINK_LIBRARIES(my_test core)
TARGET_LINK_LIBRARIES(my_test server)
TARGET_LINK_LIBRARIES(my_test log)

TARGET_LINK_LIBRARIES(my_test jemalloc)







