AUX_SOURCE_DIRECTORY(. server_Src)

ADD_LIBRARY(server_lib ${server_Src})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/core)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/loglib)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/utillib)

TARGET_LINK_LIBRARIES(server_lib core)
TARGET_LINK_LIBRARIES(server_lib log_lib)
TARGET_LINK_LIBRARIES(server_lib util_lib)
