AUX_SOURCE_DIRECTORY(. server_Src)

ADD_LIBRARY(server ${server_Src})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/core)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/log)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/util)

TARGET_LINK_LIBRARIES(server core)
TARGET_LINK_LIBRARIES(server liblog)
TARGET_LINK_LIBRARIES(server libutil)
